# CSC8503

./: CSC8503.sln  README.md
Assets/Data/: character.json  dragon.json  monster.json  pet.json  player.json
Assets/Meshes/: DogPBR.msh  Dragon.msh  RobotKyle.msh  Role_T.msh  TurtleShell.msh  polySurface1.msh
BoostPythonTest/: BoostPythonTest.vcxproj  BoostPythonTest.vcxproj.filters  hello.cpp  hello.py
CSC8503/CSC8503Common/: CSC8503Common.vcxproj  CSC8503Common.vcxproj.filters  CollisionDetection.cpp  CollisionDetection.h  CollisionVolume.h  Constraint.h  Debug.h  GameObject.cpp  GameObject.h  GameScreen.h  GameWorld.cpp  GameWorld.h  IntroScreen.cpp  IntroScreen.h  NavigationGrid.cpp  PauseScreen.h  PhysicsObject.h  PhysicsSystem.cpp  PhysicsSystem.h  QuadTree.h  (+17 more)
CSC8599Common/: AbstractComponent.cpp  AbstractComponent.h  AbstractStateMachine.cpp  AbstractStateMachine.h  AdaptiveDebugSystem.cpp  AdaptiveDebugSystem.h  CMakeLists.txt  CSC8599Common.vcxproj  CSC8599Common.vcxproj.filters  Character.cpp  Character.h  DebugStateMachine.cpp  DebugStateMachine.h  Dragon.cpp  Dragon.h  EventSystem.cpp  EventSystem.h  LTL_To_Edges.cpp  LTL_To_Edges.h  Monster.cpp  Monster.h  Pet.cpp  Pet.h  PetController.cpp  PetController.h  PlalyerAIController.cpp  PlalyerAIController.h  Player.cpp  Player.h  PlayerController.cpp  PlayerController.h  State.cpp  State.h  StateMachine.cpp  StateMachine.h  StateMachinePlus.cpp  StateMachinePlus.h  StateTransition.cpp  StateTransition.h  pch.h
Common/: Common.vcxproj  Common.vcxproj.filters  Mouse.h  UserController.cpp  UserController.h
(+124 files in other folders)
